--- a/hackerrank/index.html
+++ b/hackerrank/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BrightChamps
+
+    </title>
+    <script  src="index.js"></script>
 </head>
 <body>
-    <bu
-    <script src="index.js"></script>
+    <div>Hello</div>
+    <div id="rating"></div>
 </body>
 </html>
