--- a/tutorials/roadsidecoder/index.html
+++ b/tutorials/roadsidecoder/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    
-    <script src="index.js"></script>
-</body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <script src="bind.js"></script>
+    <!--  <script src="index.js"></script> -->
+
+    <!-- <script src="promise.js"></script> -->
+    <!-- <script src="promiseAll.js"></script> -->
+    <!-- <script src="currying.js"></script> -->
+
+    <!-- <button type="button" class="increment_btn">Increment</button>
+    <p>Button Pressed <span class="increment_pressed">0</span>Times</p>
+    <p>Triggered <span class="increment_count">0</span>Times</p>
+    <script src="debounce.js"></script> -->
+  </body>
 </html>
